--- a/.vitepress/theme/style/index.css
+++ b/.vitepress/theme/style/index.css
@@ -1,2 +1,9 @@
-@import "./var.css";
-@import "vp-code-group.css";
+@import './var.css';
+@import './vp-code.css';
+@import './vp-code-group.css';
+@import './rainbow.css';
+@import './blockquote.css';
+@import './custom-block.css';
+@import './blur.css';
+@import './hidden.css';
+@import './marker.css';
